--- a/portfolio.css
+++ b/portfolio.css
@@ -78,6 +78,7 @@ body {
     border-radius: 100px;
     width: 770px;
     transition: transform 0.3s;
+    margin-bottom: 20px;
   }
   
   .project-card:hover {
@@ -125,3 +126,4 @@ body {
   body.light-mode #theme-toggle {
     color: #1f1f1f;
   }
+
